Frontend: Dynamic Sky based on time, Fix overflow-x mobile

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -162,10 +162,6 @@
 .landing-sky{
 	position: relative;
     height: 100vh;
-    background-image: linear-gradient(
-            to bottom,
-            cyan, white
-    );
     z-index: 1;
 }
 
